--- a/res/musec.ui
+++ b/res/musec.ui
@@ -2,15 +2,12 @@
 <ui version="4.0">
  <class>MusecMainWindow</class>
  <widget class="QWidget" name="MusecMainWindow">
-  <property name="windowModality">
-   <enum>Qt::NonModal</enum>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>420</width>
-    <height>220</height>
+    <height>225</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>420</width>
-    <height>220</height>
+    <height>225</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>420</width>
-    <height>220</height>
+    <height>225</height>
    </size>
   </property>
   <property name="contextMenuPolicy">
@@ -62,7 +59,7 @@
     <rect>
      <x>10</x>
      <y>30</y>
-     <width>400</width>
+     <width>380</width>
      <height>20</height>
     </rect>
    </property>
@@ -88,7 +85,7 @@
     <rect>
      <x>10</x>
      <y>80</y>
-     <width>400</width>
+     <width>380</width>
      <height>20</height>
     </rect>
    </property>
@@ -101,7 +98,7 @@
     <rect>
      <x>10</x>
      <y>130</y>
-     <width>400</width>
+     <width>380</width>
      <height>20</height>
     </rect>
    </property>
@@ -125,9 +122,9 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>110</x>
      <y>160</y>
-     <width>400</width>
+     <width>300</width>
      <height>16</height>
     </rect>
    </property>
@@ -135,51 +132,209 @@
     <string/>
    </property>
    <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="btnPlay">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>210</x>
      <y>180</y>
-     <width>80</width>
-     <height>23</height>
+     <width>100</width>
+     <height>39</height>
     </rect>
    </property>
    <property name="text">
-    <string>Play Again</string>
+    <string>Play</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnNext">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>310</x>
      <y>180</y>
-     <width>80</width>
-     <height>23</height>
+     <width>100</width>
+     <height>39</height>
     </rect>
    </property>
    <property name="text">
     <string>Accept</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnBrowse">
+  <widget class="QLabel" name="lblScore">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>180</y>
-     <width>80</width>
-     <height>23</height>
+     <x>10</x>
+     <y>160</y>
+     <width>90</width>
+     <height>13</height>
     </rect>
    </property>
    <property name="text">
-    <string>Browse</string>
+    <string>Score: 0</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chkTitle">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>396</x>
+     <y>34</y>
+     <width>14</width>
+     <height>14</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chkArtist">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>396</x>
+     <y>84</y>
+     <width>14</width>
+     <height>14</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chkAlbum">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>396</x>
+     <y>134</y>
+     <width>14</width>
+     <height>14</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="btnClear">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>40</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Clear</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="btnAddDir">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>180</y>
+     <width>150</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add Directory...</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="btnAddFiles">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>200</y>
+     <width>110</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add Files...</string>
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>edTitle</tabstop>
+  <tabstop>edArtist</tabstop>
+  <tabstop>edAlbum</tabstop>
+  <tabstop>btnNext</tabstop>
+  <tabstop>btnPlay</tabstop>
+ </tabstops>
  <resources>
   <include location="musec.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>edTitle</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>209</x>
+     <y>39</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>369</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>edArtist</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>209</x>
+     <y>89</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>369</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>edAlbum</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>209</x>
+     <y>139</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>369</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
