--- a/res/musec.ui
+++ b/res/musec.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>420</width>
-    <height>260</height>
+    <height>275</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,12 +17,6 @@
    </sizepolicy>
   </property>
   <property name="minimumSize">
-   <size>
-    <width>420</width>
-    <height>260</height>
-   </size>
-  </property>
-  <property name="maximumSize">
    <size>
     <width>420</width>
     <height>260</height>
@@ -49,7 +43,7 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>180</y>
+      <y>190</y>
       <width>100</width>
       <height>39</height>
      </rect>
@@ -88,25 +82,6 @@
     </property>
     <property name="text">
      <string>Album:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblInfo">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>160</y>
-      <width>300</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QCheckBox" name="chkAlbum">
@@ -161,7 +136,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>180</y>
+      <y>190</y>
       <width>100</width>
       <height>39</height>
      </rect>
@@ -219,13 +194,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>190</y>
       <width>90</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>Score: 0</string>
+     <string>Score: </string>
     </property>
    </widget>
    <widget class="QLineEdit" name="edArtist">
@@ -239,6 +214,86 @@
       <width>380</width>
       <height>20</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblAverage">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>90</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Average: </string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="slDifficulty">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>160</y>
+      <width>381</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>3</number>
+    </property>
+    <property name="pageStep">
+     <number>1</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksBelow</enum>
+    </property>
+    <property name="tickInterval">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblDifficulty">
+    <property name="geometry">
+     <rect>
+      <x>396</x>
+      <y>163</y>
+      <width>14</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>1s</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblMultiplier">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>190</y>
+      <width>90</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Multiplier: </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblLast">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>210</y>
+      <width>90</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Last Score:</string>
     </property>
    </widget>
   </widget>
@@ -306,8 +361,68 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>edTitle</tabstop>
+  <tabstop>edArtist</tabstop>
+  <tabstop>edAlbum</tabstop>
+  <tabstop>btnNext</tabstop>
+  <tabstop>btnPlay</tabstop>
+  <tabstop>chkTitle</tabstop>
+  <tabstop>chkArtist</tabstop>
+  <tabstop>chkAlbum</tabstop>
+  <tabstop>slDifficulty</tabstop>
+ </tabstops>
  <resources>
   <include location="musec.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>edTitle</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>60</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>359</x>
+     <y>230</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>edArtist</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>110</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>359</x>
+     <y>230</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>edAlbum</sender>
+   <signal>returnPressed()</signal>
+   <receiver>btnNext</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>160</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>359</x>
+     <y>230</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
