--- a/res/musec.ui
+++ b/res/musec.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>275</height>
+    <width>450</width>
+    <height>290</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,14 +18,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>420</width>
-    <height>275</height>
+    <width>450</width>
+    <height>290</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>420</width>
-    <height>275</height>
+    <width>450</width>
+    <height>290</height>
    </size>
   </property>
   <property name="focusPolicy">
@@ -48,10 +48,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>235</x>
       <y>190</y>
       <width>100</width>
-      <height>39</height>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
@@ -64,10 +64,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>396</x>
-      <y>34</y>
-      <width>14</width>
-      <height>14</height>
+      <x>425</x>
+      <y>30</y>
+      <width>15</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -82,8 +82,8 @@
      <rect>
       <x>10</x>
       <y>110</y>
-      <width>400</width>
-      <height>13</height>
+      <width>410</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -96,10 +96,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>396</x>
-      <y>134</y>
-      <width>14</width>
-      <height>14</height>
+      <x>425</x>
+      <y>130</y>
+      <width>15</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -114,8 +114,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>400</width>
-      <height>13</height>
+      <width>410</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -130,7 +130,7 @@
      <rect>
       <x>10</x>
       <y>130</y>
-      <width>380</width>
+      <width>410</width>
       <height>20</height>
      </rect>
     </property>
@@ -141,10 +141,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>340</x>
       <y>190</y>
       <width>100</width>
-      <height>39</height>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
@@ -156,8 +156,8 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>400</width>
-      <height>13</height>
+      <width>410</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -170,10 +170,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>396</x>
-      <y>84</y>
-      <width>14</width>
-      <height>14</height>
+      <x>425</x>
+      <y>80</y>
+      <width>15</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -191,7 +191,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>380</width>
+      <width>410</width>
       <height>20</height>
      </rect>
     </property>
@@ -201,8 +201,8 @@
      <rect>
       <x>10</x>
       <y>190</y>
-      <width>90</width>
-      <height>13</height>
+      <width>110</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -217,7 +217,7 @@
      <rect>
       <x>10</x>
       <y>80</y>
-      <width>380</width>
+      <width>410</width>
       <height>20</height>
      </rect>
     </property>
@@ -227,8 +227,8 @@
      <rect>
       <x>10</x>
       <y>210</y>
-      <width>90</width>
-      <height>13</height>
+      <width>110</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -238,10 +238,10 @@
    <widget class="QSlider" name="slDifficulty">
     <property name="geometry">
      <rect>
-      <x>9</x>
+      <x>10</x>
       <y>160</y>
-      <width>381</width>
-      <height>22</height>
+      <width>410</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="minimum">
@@ -266,10 +266,10 @@
    <widget class="QLabel" name="lblDifficulty">
     <property name="geometry">
      <rect>
-      <x>396</x>
-      <y>163</y>
-      <width>14</width>
-      <height>13</height>
+      <x>425</x>
+      <y>160</y>
+      <width>15</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -279,10 +279,10 @@
    <widget class="QLabel" name="lblMultiplier">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>125</x>
       <y>190</y>
-      <width>90</width>
-      <height>13</height>
+      <width>110</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -292,10 +292,10 @@
    <widget class="QLabel" name="lblLast">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>125</x>
       <y>210</y>
-      <width>90</width>
-      <height>13</height>
+      <width>110</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -308,7 +308,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>420</width>
+     <width>450</width>
      <height>21</height>
     </rect>
    </property>
@@ -331,7 +331,6 @@
      <string>Help</string>
     </property>
     <addaction name="actAbout"/>
-    <addaction name="actAboutQt"/>
    </widget>
    <widget class="QMenu" name="menuLanguage">
     <property name="title">
@@ -348,6 +347,9 @@
   <widget class="QStatusBar" name="statusbar">
    <property name="enabled">
     <bool>true</bool>
+   </property>
+   <property name="sizeGripEnabled">
+    <bool>false</bool>
    </property>
   </widget>
   <action name="actAddDir">
