--- a/res/musec.ui
+++ b/res/musec.ui
@@ -151,10 +151,10 @@
     <item row="6" column="0" colspan="6">
      <widget class="QSlider" name="slDifficulty">
       <property name="minimum">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="maximum">
-       <number>3</number>
+       <number>2</number>
       </property>
       <property name="pageStep">
        <number>1</number>
@@ -373,7 +373,7 @@
   </action>
   <action name="actStats">
    <property name="text">
-    <string>Stats</string>
+    <string>Statistics</string>
    </property>
   </action>
   <action name="actAbout">
