--- a/res/musec.ui
+++ b/res/musec.ui
@@ -330,6 +330,7 @@
      <string>Info</string>
     </property>
     <addaction name="actStats"/>
+    <addaction name="actSubmit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -401,6 +402,11 @@
   <action name="actLangFr">
    <property name="text">
     <string notr="true">Français</string>
+   </property>
+  </action>
+  <action name="actSubmit">
+   <property name="text">
+    <string>Submit Score</string>
    </property>
   </action>
  </widget>
