--- a/www/score/scoreboard.css
+++ b/www/score/scoreboard.css
@@ -56,13 +56,8 @@ th {
     text-shadow: 0px 0px 6px #222222;
 }
 
-tr.userdetails { display: none; }
+tbody.userentry tr { transition: background-color 0.5s ease; }
 tbody.userentry:hover tr:first-child { background-color: rgba(238, 238, 238, 0.5); }
-
-tbody.userentry:hover tr.userdetails {
-    display: table-row;
-    background-color: rgba(238, 238, 238, 0.3);
-}
 
 tbody:first-child  tr:first-child th:first-child { border-top-left-radius: 12px; }
 tbody:first-child  tr:first-child th:last-child { border-top-right-radius: 12px; }
